# hspec-expectations-lens

./: .gitignore  .travis.yml  .vim.custom  CHANGELOG.markdown  CHANGELOG.md  Guardfile  README.lhs  README.markdown  README.md  Test-Hspec-Expectations-Lens.html  Test-Hspec-Lens.html  default.nix  doc-index.html  hspec-expectations-lens.cabal  hspec-expectations-lens.haddock  hspec-expectations-lens.nix  index-frames.html  index.html  mini_Test-Hspec-Expectations-Lens.html  mini_Test-Hspec-Lens.html  params.json
src/: Test-Hspec-Expectations-Lens.html  Test-Hspec-Lens.html
src/Test/Hspec/: Lens.hs
src/Test/Hspec/Expectations/: Lens.hs
test/Test/Hspec/Expectations/: LensSpec.hs
