name:                hspec-expectations-lens
version:             0.1.0.0
synopsis:            Hspec expectations for the lens stuff
-- description:         
homepage:            https://github.com/supki/hspec-expectations-lens
license:             BSD3
license-file:        LICENSE
author:              Matvey Aksenov
maintainer:          matvey.aksenov@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  build-depends:
      base                    == 4.*
    , hspec-expectations
    , HUnit
  exposed-modules:
    Test.Hspec.Expectations.Lens

test-suite spec
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
      base                    == 4.*
    , hspec
    , hspec-expectations-lens
    , lens                    >= 3.9
    , silently
    -- , HUnit
